# django-nextjs-template

./: .editorconfig  .env.prod.example  .gitignore  README.md  docker-compose.prod.yml  docker-compose.yml
.devcontainer/: devcontainer.json  docker-compose.yml  install-dependencies.sh  post_start.sh  pre-setup.sh  setup.sh
.github/workflows/: cd-pipeline.yml  ci-backend.yml  ci-frontend.yml  template-sync.yml
client/: .env.local.example  .eslintrc.json  .lintstagedrc.json  eslint.config.mjs  next.config.mjs  package-lock.json  package.json  tailwind.config.ts
client/.husky/: pre-commit
client/src/components/ui/: button.tsx
client/src/pages/: index.tsx
client/src/styles/: globals.css
docker/client/: Dockerfile  entrypoint.sh
docker/nginx/: custom.conf
docker/server/: Dockerfile  entrypoint.sh
docs/: index.md  package-lock.json  package.json
docs/.vitepress/: config.mts
docs/client/: index.md
docs/examples/: index.md
docs/server/: index.md
server/: .env.example  README.md  dev.sh  idiomatic-django.md  nuke.sh  pyproject.toml
server/api/: settings.py  urls.py
server/bookings/: filters.py  models.py  permissions.py  serializers.py  tests.py  urls.py  views.py
server/bookings/migrations/: 0001_initial.py  0002_feeding_remove_booking_room.py  0003_feeding_enclosure_delete_booking.py
server/feedback/: models.py
server/feedback/migrations/: 0001_initial.py  0002_feedback_author.py
server/healthcheck/: urls.py  views.py
server/server/: settings.py  urls.py
server/user_profile/: models.py  permissions.py  serializers.py  urls.py  views.py
server/user_profile/migrations/: 0001_initial.py
server/users/: tests.py  urls.py  views.py
server/users/management/commands/: create_sample_users.py
server/zoo/: admin.py  apps.py  filters.py  models.py  permissions.py  serializers.py  tests.py  urls.py  views.py
server/zoo/management/commands/: create_sample_data.py
server/zoo/migrations/: 0001_initial.py  0002_building_room_building.py  0003_habitat_remove_room_building_enclosure_and_more.py
